--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <script src="js/form.js"></script>
 <script src="js/cookies.js"></script>
 <script src="data/reviews.js"></script>
-<script src="js/massive.js"></script>
+<script src="js/reviews.js"></script>
 
 </body>
 </html>
