Все поправил пробую тревис

--- a/index.html
+++ b/index.html
@@ -95,9 +95,8 @@
   </form>
 </div>
 
-<<<<<<< HEAD
 <script src="js/cookies.js"></script>
-=======
+
 <template id="review-template">
   <article class="review">
     <img src="" class="review-author" alt="" title="" />
@@ -111,10 +110,10 @@
   </article>
 </template>
 
->>>>>>> js-htmlacademy/master
+
 <script src="js/form.js"></script>
 <script src="js/cookies.js"></script>
-<script src="data/reviews.js"></script>
+<script src="data/reviews.json"></script>
 <script src="js/reviews.js"></script>
 
 </body>
