--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <script src="js/form.js"></script>
 <script src="lib/cookies.js"></script>
-<script src="data/reviews.json"></script>
+<script src="data/reviews.js"></script>
 <script src="js/reviews.js"></script>
 
 </body>
