--- a/index.html
+++ b/index.html
@@ -121,18 +121,13 @@
 </template>
 
 <script src="js/form.js"></script>
-<<<<<<< HEAD
 <script src="data/reviews.json"></script>
 <script src="js/reviews.js"></script>
-
-=======
-<<<<<<< HEAD
 <script src="lib/cookies.js"></script>
-<script src="data/reviews.json"></script>
-<script src="js/reviews.js"></script>
-=======
->>>>>>> js-htmlacademy/master
->>>>>>> Mission-4
+<script src="js/gallery.js"></script>
+<script src="js/game_demo.js"></script>
+
+
 
 </body>
 </html>
