--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
 </template>
 
 <script src="js/form.js"></script>
-<<<<<<< HEAD
 <script src="lib/cookies.js"></script>
 <script src="data/reviews.json"></script>
+<script src="js/review.js"></script>
 <script src="js/reviews.js"></script>
-=======
->>>>>>> js-htmlacademy/master
+
+
 
 </body>
 </html>
