--- a/index.html
+++ b/index.html
@@ -120,13 +120,12 @@
   </article>
 </template>
 
-<script src="js/form.js"></script>
-<<<<<<< HEAD
 <script src="lib/cookies.js"></script>
+<script src="js/form.js"></script>
 <script src="data/reviews.json"></script>
 <script src="js/reviews.js"></script>
-=======
->>>>>>> js-htmlacademy/master
+<script src="js/gallery.js"></script>
+<script src="js/game_demo.js"></script>
 
 </body>
 </html>
