--- a/index.html
+++ b/index.html
@@ -123,20 +123,10 @@
 <script src="lib/cookies.js"></script>
 <script src="js/form.js"></script>
 <script src="data/reviews.json"></script>
+<script src="js/review.js"></script>
 <script src="js/reviews.js"></script>
-<<<<<<< HEAD
-<<<<<<< HEAD
 <script src="js/gallery.js"></script>
 <script src="js/game_demo.js"></script>
-=======
-
-
-
->>>>>>> js-htmlacademy/master
-=======
-<script src="js/gallery.js"></script>
-<script src="js/game_demo.js"></script>
->>>>>>> master
 
 </body>
 </html>
