--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <link href='https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
+  <script type="text/javascript" src="http://backbonejs.org/backbone-min.js"></script>
   <title>Code and Magick</title>
 </head>
 <body>
@@ -56,7 +59,7 @@
 
   <footer>
     <a href="http://htmlacademy.ru"><img src="img/htmlacademy-logo.png" alt="HTML Academy" width="134" height="37" /></a>
-    <p><a href="http://htmlacademy.ru">Сделано в HTML Academy</a><br>в 2015 году</p>
+    <p><a>Сделано HTML Academy и Alexandr Dragin</a><br>в 2015 году</p>
   </footer>
 </main>
 
