конфликт после апдейта

--- a/index.html
+++ b/index.html
@@ -119,16 +119,14 @@
   </article>
 </template>
 
-<script src="js/form.js"></script>
-<<<<<<< HEAD
+<script src="lib/cookies.js"></script>
+<script src="js/form.js" charset="utf-8"></script>
 <script src="data/reviews.json"></script>
 <script src="js/review.js"></script>
 <script src="js/reviews.js"></script>
 <script src="js/gallery.js"></script>
 <script src="js/game_demo.js"></script>
-=======
 <script src="js/game.js"></script>
->>>>>>> js-htmlacademy/master
 
 </body>
 </html>
