--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     <p class="review-text"></p>
     <div class="review-quiz">
       Полезный отзыв?
-      <span class="review-quiz-answer">Да</span>
-      <span class="review-quiz-answer">Нет</span>
+      <span class="review-quiz-answer review-quiz-answer-yes">Да</span>
+      <span class="review-quiz-answer review-quiz-answer-no">Нет</span>
     </div>
   </article>
 </template>
