очень много всего

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link href='https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
-  <script type="text/javascript" src="http://backbonejs.org/backbone-min.js"></script>
+  <script type="text/javascript" src="lib/underscore-min.js"></script>
+  <script type="text/javascript" src="lib/backbone-min.js"></script>
   <title>Code and Magick</title>
 </head>
 <body>
@@ -131,12 +131,14 @@
 
 <script src="js/views/review.js" charset="utf-8"></script>
 <script src="js/views/photo.js" charset="utf-8"></script>
+<script src="js/views/video.js"></script>
 
 <!--<script src="data/reviews.json"></script>
 <script src="js/review.js"></script>-->
 <script src="js/reviews.js"></script>
 
 <script src="js/gallery.js" charset="utf-8"></script>
+<script src="js/game.js"></script>
 <script src="js/game_demo.js"></script>
 <script type="text/javascript"></script>
 
