--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link href='https://fonts.googleapis.com/css?family=PT+Mono&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-  <script type="text/javascript" src="lib/underscore-min.js"></script>
-  <script type="text/javascript" src="lib/backbone-min.js"></script>
+  <script type="text/javascript" src="lib/.underscore-min.js"></script>
+  <script type="text/javascript" src="lib/.backbone-min.js"></script>
   <title>Code and Magick</title>
 </head>
 <body>
@@ -122,8 +122,7 @@
   </article>
 </template>
 
-<<<<<<< HEAD
-<script src="lib/cookies.js"></script>
+<script src="lib/.cookies.js"></script>
 <script src="js/form.js" charset="utf-8"></script>
 
 <script src="js/models/review.js" charset="utf-8"></script>
@@ -141,11 +140,6 @@
 <script src="js/game.js"></script>
 <script src="js/game_demo.js"></script>
 <script type="text/javascript"></script>
-
-=======
-<script src="js/form.js"></script>
-<script src="js/game.js"></script>
->>>>>>> js-htmlacademy/master
 
 </body>
 </html>
