--- a/index.html
+++ b/index.html
@@ -123,23 +123,7 @@
 </template>
 
 <script src="lib/.cookies.js"></script>
-<script src="js/form.js" charset="utf-8"></script>
-
-<script src="js/models/review.js" charset="utf-8"></script>
-<script src="js/models/reviews.js" charset="utf-8"></script>
-
-<script src="js/views/review.js" charset="utf-8"></script>
-<script src="js/views/photo.js" charset="utf-8"></script>
-<script src="js/views/video.js"></script>
-
-<!--<script src="data/reviews.json"></script>
-<script src="js/review.js"></script>-->
-<script src="js/reviews.js"></script>
-
-<script src="js/gallery.js" charset="utf-8"></script>
-<script src="js/game.js"></script>
-<script src="js/game_demo.js"></script>
-<script type="text/javascript"></script>
+<script data-main="js/main.js" src="lib/.require.js" charset="utf-8"></script>
 
 </body>
 </html>
